# atsam4s16b-embedded-hal

./: Cargo.toml  README.md
src/: gpio.rs  lib.rs  prelude.rs
